# araneae-computer

./: .clang-format  .gitignore  .gitmodules  README.md
compiler/: CMakeLists.txt
compiler/include/araneae/abi/: Types.h
compiler/include/araneae/ast/: Ast.h
compiler/include/araneae/cfg/: Class.h  Dag.h  Function.h  Module.h
compiler/include/araneae/codegen/: Codegen.h
compiler/lib/ast/: Ast.c
compiler/lib/aux/: Aux.c  CodeBuffer.c
compiler/lib/cfg/: Builder.c  Cfg.c  Class.c  Dag.c  Function.c
compiler/lib/codegen/: BeamCodegen.c  CMakeLists.txt  Register.h  Scope.h  Symbol.h  Types.h
compiler/lib/lexer/: CMakeLists.txt  lexer.l
compiler/lib/parser/: CMakeLists.txt  parser.y
compiler/test/e2e/: add.ae.S  add_cycle.ae  add_dyn.ae  add_dyn.ae.S  fib.ae.S  func_calling.ae  func_calling.ae.S  main.ae  test_io.ae
compiler/tools/araneae/: CMakeLists.txt  main.c
compiler/tools/araneae-beam/: CMakeLists.txt
compiler/tools/araneaeVM/: ARARCH.target.pdsl.in  CMakeLists.txt  asm-dispatch.sh  devices.xml  run-devices.sh  run-io
compiler/tools/araneaeVM/test/: empty.ar.S  hw.ar.S  test.S
include/araneae/abi/: Reference.h
include/araneae/ast/: Builder.h  Lexer.h
include/araneae/aux/: Aux.h  CodeBuffer.h  PtrVector.h
include/araneae/cfg/: Builder.h  Cfg.h
include/araneae/codegen/: BeamCodegen.h
include/araneae/error/: ErrorCollector.h
kernel/: CMakeLists.txt
kernel/lib/: CMakeLists.txt  configure-vm.ae.s  cooperative-multitasking.ae  io.ae.s  rr-multitasking-internal.ae.s  rr-multitasking.ae
kernel/test/e2e/: two_tasks.ae
lib/: CMakeLists.txt
lib/ast/: Builder.c  CMakeLists.txt
lib/aux/: CMakeLists.txt  PtrVector.c
lib/cfg/: CMakeLists.txt  Dumpers.c  Module.c
lib/codegen/: Codegen.c  EmitCtx.c  EmitCtx.h  Register.c  Scope.c  Symbol.c
lib/error/: CMakeLists.txt  ErrorCollector.c
test/e2e/: add.ae  array.ae  builtins.S  calc.ae  calc.ae.S  calc_classes.ae  calc_classes_cr.ae  calc_cr.ae  err.ae  fib.ae  hw.ae  literal.ae  one_function.ae  test.ae.S  test_io.ae.S
tools/: CMakeLists.txt
tools/araneae-beam/: main.c
tools/araneaeVM/: araneae  asm-get.sh  out.ptptb  run-debug  run-debug.sh  run-io-interactive.sh  run.sh  source.sh  validate.sh
tools/araneaeVM/test/: test_reg.S
